--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dnscrypt-proxy"]
 	path = dnscrypt-proxy
 	url = https://github.com/jedisct1/dnscrypt-proxy
+[submodule "argparse"]
+	path = argparse
+	url = https://github.com/Cofyc/argparse
