--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ compiler:
  - clang
  - gcc
 before_script:
+ - sudo apt-get install libevent-dev
  - git clone git://github.com/jedisct1/libsodium.git
  - cd libsodium
  - git checkout 0.4.1
