--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
 *.[aos]
 *.out
+*.tar.gz
+*.pyc
 *~
 /tags
 /dnscrypt-wrapper
+/version.h
+/test-*
+!test-*.c
+*.so
+*.so.dSYM/
+.depend/
+/tests/tmp/
+/config.log
+/configure
+/autom4te.cache/
+/config.mak.autogen
+/config.mak
+/config.status
+/MAIN-CFLAGS
+/MAIN-LDFLAGS
+*.pid
