Travis build: Sodium 0.4.1 is very old. Use at least 1.0.0. Which is old as well, but what Debian-stable has. Also make sure that everything works with a minimal Sodium build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ before_script:
  - sudo apt-get install libevent-dev
  - git clone git://github.com/jedisct1/libsodium.git
  - cd libsodium
- - git checkout 0.4.1
+ - git checkout 1.0.0
  - ./autogen.sh
- - ./configure --disable-dependency-tracking
+ - ./configure --disable-dependency-tracking --enable-minimal
  - sudo make install
  - sudo ldconfig
  - cd ..
