--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
  # workaround clang not system wide, fail on sudo make install
  - export CC=`which $CC`
 before_script:
- - sudo apt-get install libevent-dev unbound
+ - sudo apt-get install libevent-dev
  - git clone git://github.com/jedisct1/libsodium.git
  - cd libsodium
  - git checkout 1.0.0
@@ -19,3 +19,5 @@ before_script:
  - cd ..
 script:
  - make
+ - sudo bash travis_setup_test.sh
+ - cd tests && bundle install && make test
