added 'adduser' dependency (lintian) description formatting issue (lintian)

--- a/debian/control
+++ b/debian/control
@@ -8,12 +8,13 @@ Homepage: https://dnscrypt.org
 
 Package: dnscrypt-wrapper
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libsodium13, libevent-2.0-5
+Depends: ${shlibs:Depends}, ${misc:Depends}, adduser, libsodium13, libevent-2.0-5
 Description: custom secured DNS query wrapper
  DNSCrypt is a protocol that authenticates communications between a DNS client 
  and a DNS resolver. It prevents DNS spoofing. It uses cryptographic signatures 
  to verify that responses originate from the chosen DNS resolver and
  haven't been tampered with.
  .
- This package provides server-side proxy for DNS queries to a designated upstream.
+ This package provides server-side proxy for DNS queries to a designated
+ upstream.
 
