--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,13 @@ before_script:
  - git clone git://github.com/jedisct1/libsodium.git
  - cd libsodium
  - ./autogen.sh
- - ./configure --disable-dependency-tracking --enable-minimal
+ - ./configure --disable-dependency-tracking
  - sudo make install
  - sudo ldconfig
  - cd ..
 script:
+ - autoreconf -vi
+ - ./configure
  - make
  - sudo ./.travis_setup.sh
  - cd tests && bundle install && make test
