--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,10 @@ compiler:
  - gcc
 before_script:
  - sudo apt-get install libevent-dev
- - git clone git://github.com/jedisct1/libsodium.git
- - cd libsodium
- - ./autogen.sh
- - ./configure --disable-dependency-tracking
- - make
+ - curl https://download.libsodium.org/libsodium/releases/LATEST.tar.gz | tar -xvzf -
+ - cd libsodium-stable
+ - ./configure
+ - make && make check
  - sudo make install
  - sudo ldconfig
  - cd ..
